--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
+body {
+  background-color: rgb(250, 250,250);
+}
+
 .App {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  
+}
+.App > .image {
+  width: 30%;
+  height: 70%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media only screen and (max-width: 770px) {
+  .charts {
+    margin: 0 20%;
+    padding-bottom: 40px;
   }
 }
+.image {
+  width: 370px;
+  margin-top: 50px;
+}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+
+.footer{
+  background-color:rgb(134, 93, 247);
+  text-align: center;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  min-height: 1vh;
+  margin: 0;
+  
+  font-family: 'Lato', sans-serif;
+  float: inline-end;
+  border-radius: 4px;
 }
